--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 <body>
     <p th:text="'Hello, ' + ${name} + '!'" />
     
-	<form action="viewbooks">
+	<form action="/viewbooks">
 
 	<table class="prettytable">
 
