--- a/src/main/resources/templates/viewbooks.html
+++ b/src/main/resources/templates/viewbooks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Employee List</title>
+    <title>View Books</title>
  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" href="css/example.css" />
 </head>
@@ -15,7 +15,7 @@
 			    <td>
 			    	<select th:field="*{branchid}">
 			    		<option value="0">Select Branch</option>
-			    		<option value="All">All Branches</option>
+<!-- 			    		<option value="All">All Branches</option> -->
 			    		<option th:each="brancheach: ${allBranches}" th:value="${brancheach.branchid}" th:text="${brancheach.branchname}"></option>
 			    	</select>
 			    </td>
@@ -23,28 +23,5 @@
 		    </tr>
 		</table>
 	</form>
-	
-    <form action="/checkout" method="post" th:object="${borrower}">
-	    <table class = "prettytable">
-		    <tr>
-			    <th>Title</th>
-			    <th>Publisher</th>
-			    <th>Number Available</th>
-			    <th>Check Out</th>
-		    </tr>
-		    
-		    <tr th:each="book: ${bookList}">
-		        <td th:text="${book.title}" />
-		        <td th:text="${book.publisher}" />
-		        <td th:text="${book.numberavailable}" />
-		        <td>
-		        	<input type="checkbox" th:field="*{books}" th:value="${book.bookid}">
-	        	</td>
-		    </tr>
-		    <tr>
-		    	<td><input type="submit" value="Submit"> <input type="reset" value="Reset"></td>
-	    	</tr>
-	    </table>
-    </form>
 </body>
 </html>
