--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,12 +4,14 @@
     <title>Home</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
-<body> 
-	<h1>Welcome!</h1> 
+<body>  
 	<form action="/viewbooks" method="POST">
 
 	<table class="prettytable">
 
+	<tr>
+		<td><p th:text="'Welcome ' + ${borrower.name} + '!'" /></td>
+	</tr>
 	<tr> 
 		<td><p><a href="editBorrower">Edit Profile</a></p></td>
  	</tr>
