--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>  
-	<form action="/viewbooks" method="POST">
+	<form action="/viewbooks">
 
 	<table class="prettytable">
 
