Updated home page so that both actions are buttons. Updated view books in controller so that it handles redirection to edit profile page.

--- a/src/main/resources/templates/editBorrower.html
+++ b/src/main/resources/templates/editBorrower.html
@@ -30,7 +30,6 @@
 <tr> 
 <td> Password: </td>
 <td> <input type="text" th:field="*{password}" value="${borrower.password}"/> </td>
-
 </tr>
 
 <tr>
@@ -39,7 +38,7 @@
 </tr>
 
 <tr>
-<td><p><a href="home">Go Back to Home</a></p></td>
+<td><p><a href="home">Back to Home</a></p></td>
 </tr>
  
 </table>
