--- a/src/main/resources/templates/viewbooksbybranch.html
+++ b/src/main/resources/templates/viewbooksbybranch.html
@@ -40,8 +40,12 @@
 		        	<input type="checkbox" th:field="*{books}" th:value="${book.bookid}">
 	        	</td>
 		    </tr>
-		    <tr>
-		    	<td><input type="submit" value="Submit"> <input type="reset" value="Reset"></td>
+	    </table>
+	    
+	    <table class = "prettytable">
+	    	<tr>
+		    	<td><input type="submit" value="Submit"></td>
+		    	<td><input type="reset" value="Reset"></td>
 	    	</tr>
 	    </table>
     </form>
