--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -8,13 +8,13 @@
 <body>
     <h1>Check Out Books</h1>
     
-    <table>
-	    <tr>
-		    <td><p th:text="'The following books are being checked out for customer: ' + ${borrower.cardno} + '!'" /></td>
-	    </tr>
-    </table>
-
-    <form th:action="@{/confirmcheckout(branch=${branch.branchid},borrower=${borrower.cardno})}" method="post" th:object="${checkoutbooks}">
+    <form th:action="@{/confirmcheckout}" method="post" th:object="${verifiedbooks}">
+	    <table>
+		    <tr>
+			    <td th:text="'The following books will be successfully checked out by user ' + ${borrower.name} + '!:'"></td>
+		    </tr>
+	    </table>
+	    
 	    <table class = "prettytable">
 		    <tr>
 			    <th>Title</th>
@@ -22,7 +22,7 @@
 			    <th>Library Branch</th>
 		    </tr>
 		    
-		    <tr th:each="book: ${checkoutbooks}">
+		    <tr th:each="book: ${verifiedbooks}">
 		        <td th:text="${book.title}" />
 		        <td th:text="${book.publisher}" />
 		        <td th:text="${branch.branchname}" />
@@ -31,8 +31,34 @@
 	    
 	    <table>
 		    <tr>
-		    	<td><input type="submit" value="Confirm"></td>
-		    	<td><button type="submit" formaction="/viewbooks">Cancel</button></td>
+			    <td>The following books have already been checked out by you and will not be checked out at this time:</td>
+		    </tr>
+	    </table>
+	    
+	    <table class = "prettytable">
+		    <tr>
+			    <th>Title</th>
+			    <th>Publisher</th>
+			    <th>Library Branch</th>
+		    </tr>
+		    
+		    <tr th:each="book: ${duplicatebooks}">
+		        <td th:text="${book.title}" />
+		        <td th:text="${book.publisher}" />
+		        <td th:text="${branch.branchname}" />
+		    </tr>
+	    </table>
+	    
+	    <table>
+		    <tr>
+			    <td>Please confirm check out</td>
+		    </tr>
+	    </table>
+	    
+	    <table>
+		    <tr>
+		    	<td> <input type="submit" name="action" value="Confirm"></td>
+				<td> <input type="submit" name="action" value="Cancel"> </td>
 	    	</tr>
     	</table>
     </form>
