Removed links from tables. Added back to home link to view books pages.

--- a/src/main/resources/templates/editBorrower.html
+++ b/src/main/resources/templates/editBorrower.html
@@ -37,11 +37,10 @@
 <td><input type="reset" value="Reset"></td>
 </tr>
 
-<tr>
-<td><p><a href="home">Back to Home</a></p></td>
-</tr>
  
 </table>
+
+<p><a href="home">Back to Home</a></p>
 </form>
 
 </body>
