--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,12 +25,9 @@
 				<td> <input type="submit" value="Login"> </td>
 				<td> <input type="reset" value="Reset"> </td>
 			</tr>
-
-			<tr> 
-				<td><p><a href="register">New Borrower? Register Here</a></p></td>
- 			</tr>
  
 		</table>
+		<p><a href="register">New Borrower? Register Here</a></p>
 	</form>
 </body>
 </html>
