--- a/src/main/resources/templates/viewbooks.html
+++ b/src/main/resources/templates/viewbooks.html
@@ -22,6 +22,7 @@
 			    <td><input type="submit" value="Update List"></td>
 		    </tr>
 		</table>
+		<p><a href="home">Back to Home</a></p>
 	</form>
 </body>
 </html>
