--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,12 +20,13 @@
 				<td> Password: </td>
 				<td> <input type="text" name="password" required/> </td>
 			</tr>
-
+		</table>
+		
+		<table class="buttons">
 			<tr> 
 				<td> <input type="submit" value="Login"> </td>
 				<td> <input type="reset" value="Reset"> </td>
 			</tr>
- 
 		</table>
 		<p><a href="register">New Borrower? Register Here</a></p>
 	</form>
