--- a/src/main/resources/templates/viewbooksbybranch.html
+++ b/src/main/resources/templates/viewbooksbybranch.html
@@ -28,6 +28,7 @@
 		    <tr>
 			    <th>Title</th>
 			    <th>Publisher</th>
+			    <th>Rating</th>
 			    <th>Number Available</th>
 			    <th>Check Out</th>
 		    </tr>
@@ -35,6 +36,7 @@
 		    <tr th:each="avail: ${availList}">
 		        <td th:text="${avail.title}" />
 		        <td th:text="${avail.publisher}" />
+		        <td th:text="${avail.rating}" />
 		        <td th:text="${avail.numberavailable}" />
 		        <td>
 		        	<input type="checkbox" th:field="*{books}" th:value="${avail.bookid}">
@@ -42,23 +44,25 @@
 		    </tr>
 	    </table>
 	    
-	    <table class = "prettytable">
+	    <table class="buttons">
 	    	<tr>
 		    	<td><input type="submit" value="Submit"></td>
 		    	<td><input type="reset" value="Reset"></td>
 	    	</tr>
 	    </table>
 	    
-	    	    <table class = "prettytable">
+	   	<table class = "prettytable">
 		    <tr>
 			    <th>Title</th>
 			    <th>Publisher</th>
+			    <th>Rating</th>
 			    <th>Number Available</th>
 		    </tr>
 		    
 		    <tr th:each="unavail: ${unavailList}">
 		        <td th:text="${unavail.title}" />
 		        <td th:text="${unavail.publisher}" />
+		        <td th:text="${unavail.rating}" />
 		        <td th:text="${unavail.numberavailable}" />
 		    </tr>
 	    </table>
