--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -55,7 +55,7 @@
 		    </tr>
 	    </table>
 	    
-	    <table>
+	    <table  class="buttons">
 		    <tr>
 		    	<td> <input type="submit" name="action" value="Confirm"></td>
 				<td> <input type="submit" name="action" value="Cancel"> </td>
