--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,6 +25,7 @@
 			<tr th:each="book: ${myLoans}">
 				<td th:text="${book.title}" />
 				<td th:text="${book.duedate}" />
+				<td> <a th:href="@{'/ratebooks/' + ${book.bookid}+ '/' + ${book.branchid}}">edit</a> </td>
 			</tr>
 		</table>
 	
