--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,12 +20,14 @@
 		<table class="prettytable">
 			<tr>
 			    <th>Title</th>
-			    <th>Due Date </th>
+			    <th>Due Date</th>
+			    <th>Rating</th>
 			</tr>
 			<tr th:each="book: ${myLoans}">
 				<td th:text="${book.title}" />
 				<td th:text="${book.duedate}" />
-				<td> <a th:href="@{'/ratebooks/' + ${book.bookid}+ '/' + ${book.branchid}}">edit</a> </td>
+				<td th:text="${book.rating}" />
+				<td><a th:href="@{'/ratebooks' + ${book.bookid} + '-' + ${book.branchid}}">Rate</a></td>
 			</tr>
 		</table>
 	
