--- a/src/main/resources/templates/ratebooks.html
+++ b/src/main/resources/templates/ratebooks.html
@@ -1,36 +1,44 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Rate Books</title>
-    <link rel="stylesheet" type="text/css" href="css/example.css" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Rate My Books</title>
+ 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" type="text/css" href="css/example.css" />
 </head>
-<body>  
-	<form th:action="@{/submitRatings/' + ${bookloan.bookid}+ '/' + ${bookloan.branchid}}" >
-
-	<p th:text="'Rate Your Books'" />
-	
-<table class="prettytable">
-
-
-	<tr>
-		<td>Title :</td>
-		<td th:text="${bookloan.title}"/>
-		<td> Rating (between 1 and 10): <input type="number" name="rating" th:field="*{bookloan.rating}" min="1" max="10"/> 
-		</td>
-	</tr>
-</table>
-	
-<table class="prettytable">
-	<tr>
-		<td> <input type="submit" value="Submit"></td>
-		<td> <input type="reset" value="Reset"> </td>
+<body>
+	<h1>Rate Your Books</h1>
+	<form th:action="@{'/submitRatings' + ${bookloan.bookid} + '-' + ${bookloan.branchid}}" >	
+		<table class="prettytable">
+			<tr>
+				<td>Title :</td>
+				<td th:text="${bookloan.title}"/>
+			</tr>
+			<tr>
+				<td>Rating :</td>
+				<td>
+					<select name="rating">
+					  <option value="10">10</option>
+					  <option value="9">9</option>
+					  <option value="8">8</option>
+					  <option value="7">7</option>
+					  <option value="6">6</option>
+					  <option value="5">5</option>
+					  <option value="4">4</option>
+					  <option value="3">3</option>
+					  <option value="2">2</option>
+					  <option value="1">1</option>
+					</select>
+				</td>
+			</tr>
+		</table>
 		
-	</tr>
- </table>
- <p><a href="home">Back to Home</a></p>
-
-</form>
-    
+		<table>
+			<tr>
+				<td> <input type="submit" value="Submit"></td>
+				<td> <input type="reset" value="Reset"> </td>
+			</tr>
+	 	</table>
+	 	<p><a href="home">Back to Home</a></p>
+	</form>  
 </body>
 </html>
