Added image to login screen, changed text color. Added background color. Added logout functionality. Moved a few buttons around. Added error handling with checkout of no books.

--- a/src/main/resources/templates/editBorrower.html
+++ b/src/main/resources/templates/editBorrower.html
@@ -32,12 +32,13 @@
 <td> <input type="text" th:field="*{password}" value="${borrower.password}"/> </td>
 </tr>
 
-<tr>
-<td> <input type="submit" value="Update"></td>
-<td><input type="reset" value="Reset"></td>
-</tr>
+</table>
 
- 
+<table  class="buttons">
+	<tr>
+		<td> <input type="submit" value="Update"></td>
+		<td><input type="reset" value="Reset"></td>
+	</tr>
 </table>
 
 <p><a href="home">Back to Home</a></p>
