--- a/src/main/resources/static/css/example.css
+++ b/src/main/resources/static/css/example.css
@@ -1,10 +1,10 @@
 /* comments*/
 h1, h2, h3, h4 {
-		color:#324f9d;
+		color:#008000;
 		padding-left:10px;
 	}
 	h1 {
-		font-size:110%;
+		font-size:130%;
 		padding:5px;
 		padding-left:10px;
 		margin:0px;
@@ -34,16 +34,17 @@ h1, h2, h3, h4 {
 	body {
 		margin:0px;
 		padding:0px;
-		font: 100% sans-serif;
+		font: 100% helvetica;
+		background-color: #e6ffe6 
 	}
 	
 	a {
 		text-decoration:none;
-		color: #324f9d;
+		color: #008000;
 		font-weight:bold;
 	}
 	a:visited {
-		color: #324f9d;
+		color: #008000;
 	}
  
   #highlight {
@@ -53,7 +54,7 @@ h1, h2, h3, h4 {
   pre.code {
  	border: 1px dashed #3c78b5;
     font-size: 12px;
-	font-family: Courier;
+	font-family: helvetica;
     margin: 10px;
 	line-height: 13px;
 }
