--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,11 +10,14 @@
 		<h1>Home</h1>
 		<table>
 			<tr>
-				<td th:text="'Welcome ' + ${borrower.name} + '!'"></td>
+				<td th:text="'Welcome ' + ${borrower.name} + '!'">
+				<td> <input type="submit" name="action" value="Edit Profile"> </td>
 			</tr>
 			<tr><td></td></tr>
+		</table>
+		<table>
 			<tr>
-				<td>The following books have been checked out by you.</td>
+				<td>These are the books you currently have checked out:</td>
 			</tr>
 		</table>
 		<table class="prettytable">
@@ -22,6 +25,8 @@
 			    <th>Title</th>
 			    <th>Due Date</th>
 			    <th>Rating</th>
+			    <th>Add Rating</th>
+			    
 			</tr>
 			<tr th:each="book: ${myLoans}">
 				<td th:text="${book.title}" />
@@ -33,8 +38,8 @@
 	
 		<table class="buttons">
 			<tr> 
-				<td> <input type="submit" name="action" value="Edit Profile"></td>
 				<td> <input type="submit" name="action" value="View Books"> </td>
+				<td> <input type="submit" name="action" value="Logout"> </td>
 			</tr>
 		 </table>
 	</form> 
