Small formatting changes

--- a/src/main/resources/templates/editBorrower.html
+++ b/src/main/resources/templates/editBorrower.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Register</title>
+<title>Edit Borrower</title>
 <link rel="stylesheet" type="text/css" href="css/example.css" />
 
 </head>
 <body>
-<h1>Register a new borrower:</h1>
+<h1>Edit borrower:</h1>
 <form th:action = "@{/updateBorrower}" th:object="${borrower}" method="post">
 
 <table class="prettytable">
