--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<h1>Register a new borrower:</h1>
+<h1>Register a new borrower</h1>
 	<form action="/newBorrower" method="POST">
 		<table class="prettytable">
 			<tr> 
