Added additional pages to remove unnecessary tables

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,6 +10,7 @@
 <h1>Register a new borrower</h1>
 	<form action="/newBorrower" method="POST">
 		<table class="prettytable">
+			<p th:text="${errormsg}"/>
 			<tr> 
 				<td> Name: </td>
 				<td> <input type="text" name="name" required/> </td>
